--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  fpdart: ^1.1.0
+  supabase_flutter: ^2.5.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
