--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,16 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.5
   get_it: ^7.7.0
+  dotted_border: ^2.1.0
+  reading_time: ^2.0.0
+  intl: ^0.19.0
+  hive: ^2.2.3
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
+  internet_connection_checker: ^1.0.0+1
+  internet_connection_checker_plus: ^2.4.2
+  image_picker: ^1.1.2
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
